added endpoint for uploading photos to server.
